--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=server
-spring.data.mongodb.uri=mongodb+srv://janhavishrikhande7654:tiger@joborbit.amp9m.mongodb.net/?retryWrites=true&w=majority&appName=JobOrbit
+spring.application.name=serverspring.data.mongodb.uri=${MONGODB_URI}
+spring.data.mongodb.uri=${MONGODB_URI}
 spring.data.mongodb.database=JobOrbit
